# syntax-boilerplate

./: Cargo.toml
examples/attrs/: Cargo.toml  attrs.rs  build.rs  run.rs  service.rs
src/: codegen.rs  interface.rs  lib.rs
