[package]
name = "attrs"
version = "0.1.0"
authors = ["Nikolay Volf"]
build = "build.rs"

[dependencies]
"ethcore-ipc" = { path = "../.." }
bincode = "*"
serde = "0.7.0"

[[bin]]
name = "attrs"
path = "run.rs"

[build-dependencies]
"ethcore-ipc" = { path = "../.." }
syntex = "0.30.0"
serde_codegen = "0.7.0"
